--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 
 input {
-  margin: 4%;
-  width: 100px;
-  height: 30px;
-  background: none;
-  border-radius: 5px;
-  padding: 0;
+  width: 50x;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
 }
 
+input::-webkit-color-swatch {
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+}
+
+
+input::-webkit-color-swatch-wrapper {
+  border: none;
+  border-radius: 50%;
+}
