--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   padding: 0;
   overflow: hidden;
   box-sizing: border-box;
-  transition: all ease-in;
+  transition: all .3s ease;
 }
 
 body {
